test/haskell2010/conformance/negative/unbound-variable.hs
module Main where

main = missing + 1
